--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/petjunction.png" />
+    <link rel="icon" type="image/svg+xml" href="/petjunction.png" class="logo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetJunction</title>
 
@@ -17,4 +17,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
+
 </html>
