--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="PetJunction provides professional pet services in Udaipur, including expert dog grooming, reliable pet boarding, and personalized dog training. Your pet's well-being is our priority." />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.petjunction.in/" />
-
+    <meta name="google-site-verification" content="6IRVO9VzZAnqhGIsgfLZ3WKDS5ADgemJkRlDWgITSk0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
