--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" href="/petjunction.png" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>PetJunction | Professional Pet Services in Udaipur</title>
-    <meta name="description" content="PetJunction provides professional pet services in Udaipur, including expert dog grooming, reliable pet boarding, and personalized dog training. Your pet's well-being is our priority." />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.petjunction.in/" />
-    <meta name="google-site-verification" content="6IRVO9VzZAnqhGIsgfLZ3WKDS5ADgemJkRlDWgITSk0" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" href="/petjunction.png" />
+
+
+  <title>Professional Pet Services in Udaipur by PetJunction</title>
+  <meta name="description"
+    content="PetJunction provides professional pet services in Udaipur, including expert dog grooming, reliable pet boarding, and personalized dog training. Your pet's well-being is our priority." />
+  <meta name="keywords"
+    content="professional pet service in udaipur , Udaipur Best Pet Boarding Top Dog Walking in Udaipur ,pet grooming service in udaipur , cat sitting service in udaipur , dog walking in udaipur , pet walking in udaipur  " />
+
+
+  <meta name="robots" content="index, follow" />
+
+  <meta name="google-site-verification" content="6IRVO9VzZAnqhGIsgfLZ3WKDS5ADgemJkRlDWgITSk0" />
+
+
+  <meta
+      property="og:title"
+      content="Professional Pet Services in Udaipur by PetJunction"
+    />
+    <meta
+      property="og:description"
+      content="PetJunction provides professional pet services in Udaipur, including expert dog grooming, reliable pet boarding, and personalized dog training. Your pet's well-being is our priority."
+    />
+    <meta property="og:image" content="/petjunction.png" />
+    <meta property="og:url" content="https://petjunction.in" />
+    <meta property="og:site_name" content="QuoteKaro" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_IN" />
+    <meta name="twitter:card" content="summary_large_image" />
+    
+
+    
+  
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
