single icon code

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" href="/petjunction.png" />
+  <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /> -->
+  <!-- <link rel="icon" type="image/png" href="/petjunction.png" /> -->
+
+  <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
+<link rel="icon" href="/petjunction.png" type="png" />
 
 
   <title>Professional Pet Services in Udaipur by PetJunction</title>
