changed logo fomat

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
   <!-- <link rel="icon" type="image/png" href="/petjunction.png" /> -->
 
   <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
-<link rel="icon" href="/petjunction.png" type="png" />
+   <link rel="icon" type="image/svg+xml" href="/petjunction.svg" />
+<!-- <link rel="icon" href="/petjunction.png" type="png" /> -->
 
 
   <title>Professional Pet Services in Udaipur by PetJunction</title>
