--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TJSZ62NF4P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TJSZ62NF4P');
+</script>
 
   <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /> -->
   <!-- <link rel="icon" type="image/png" href="/petjunction.png" /> -->
